src/objects/cb5__CBAccount__c.object
<CustomObject>
    <fields>
        <fullName>ApplicableFor__c</fullName>
        <label>Applicable for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__CBAccountType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account Type</label>
        <referenceTo>cb5__CBAccountType__c</referenceTo>
        <relationshipLabel>CB Accounts</relationshipLabel>
        <relationshipName>CBAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBSubAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account Subtype</label>
        <referenceTo>cb5__CBSubAccount__c</referenceTo>
        <relationshipLabel>CB Accounts</relationshipLabel>
        <relationshipName>CB_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Account</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>ApplicableFor__c</columns>
        <columns>cb5__CBAccountType__c</columns>
        <columns>cb5__CBSubAccount__c</columns>
        <columns>cb5__ExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>